Various cleanups, mostly redundant NotNull annotations